--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -12,10 +12,9 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    place-item: center;
+    min-height: 100vh;
     background-color: hsl(212, 45%, 89%);
     font-family: 'outfit';
 }
